fixing shift on categories/categories.html page

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1288,6 +1288,9 @@ footer {
 
 .join-bottom {
   width: 100%;
+  max-width: 100vw;
+  height: auto;
+  min-height: 3rem;
   padding-left: 6em
 }
 
@@ -1735,6 +1738,14 @@ input::placeholder {
     padding: .5em 1em
   }
 
+  .btn2 a {
+    font-size: 1rem;
+    min-height: 1rem;
+    height: auto;
+    width: 100%;
+    max-width: 100vw;
+  }
+
   .article-text h2,
   .article-text h3 {
     padding: 2% 0 0;
@@ -1828,7 +1839,12 @@ input::placeholder {
 
   .button2,
   .join-text-bottom p {
-    font-size: 1.5vw
+    font-size: 1.5vw;
+    padding-bottom: 1em;
+    min-height: 2rem;
+    height: auto;
+    width: 100%;
+    max-width: 100vw;
   }
 
   .category-buttons1,
@@ -1874,7 +1890,15 @@ input::placeholder {
 
   .join-bottom .input-text-join p {
     font-size: 1.5vw;
-    padding: 1em
+    padding: 1em;
+    min-height: 2rem;
+  }
+
+  .join-bottom {
+    min-height: 3rem;
+    width: 100%;
+    max-width: 100vw;
+    height: auto;
   }
 
   .social-media {
@@ -2006,7 +2030,7 @@ input::placeholder {
   }
 
   .category-box-text a h2 {
-    font-size: 1.2vw
+    font-size: clamp(1.2rem, 2.2vw, 3rem);
   }
 
   .input-text input {
@@ -2096,7 +2120,7 @@ input::placeholder {
   .nav-icon-container {
     width: 100%;
     max-width: 100vw;
-    min-height: 1rem;
+    min-height: 2rem;
     height: auto
   }
 
@@ -2584,21 +2608,12 @@ input::placeholder {
   }
 
   .category-box-text a h2,
-  .feature-box-text a p {
-    font-size: clamp(2rem, 3.5vw, 3rem);
-    width: 100%;
-    height: auto;
-    min-height: 1rem;
-    padding: 1vw .5vw .5vw
-  }
-
-  .category-box-text a h2,
   .feature-box-text p {
     width: 100%;
     max-width: 100vw;
-    font-size: 3.2vw;
+    font-size: clamp(2rem, 3.5vw, 4.5rem);
     height: auto;
-    min-height: 1rem;
+    min-height: 2rem;
     padding: .5vw
   }
 
@@ -2797,7 +2812,7 @@ input::placeholder {
     font-size: 3vw;
     width: 70%;
     margin: 0 auto;
-    padding: .5em 0
+    padding: .5em 0;
   }
 
   .input-text input::placeholder {
@@ -2822,8 +2837,10 @@ input::placeholder {
   .footer-col,
   .footer-col ul li a p,
   .h4 h4,
-  .join-bottom p {
-    text-align: center
+  .join-text-bottom p {
+    text-align: center;
+    min-height: 1rem;
+    height: auto;
   }
 
   .footer-content {
@@ -2899,10 +2916,12 @@ input::placeholder {
   }
 
   .h4 h4,
-  .join-bottom p {
+  .join-text-bottom p {
     font-size: 4vw;
     width: 80%;
-    margin: 0 auto
+    margin: 0 auto;
+    min-height: 2rem;
+    height: auto;
   }
 
   .input-text input {
